--- a/Besnik.GenericRepository.NHibernate/Besnik.GenericRepository.NHibernate.csproj
+++ b/Besnik.GenericRepository.NHibernate/Besnik.GenericRepository.NHibernate.csproj
@@ -30,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Besnik.GenericRepository.NHibernate.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
